# local-multi-agent-company

./: .env.example  .gitignore  CLAUDE.md  CODEX_HANDOFF.md  CONTRIBUTING.md  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  pr-checks.yml  staging-deploy.yml
config/: app.example.yaml  model-routing.example.yaml  repository-profile.example.yaml  self-improvement.policy.yaml  trusted_sources.coding_profile.json  web_search.providers.json  worker-policies.yaml  worker_guidance.defaults.json
config/prompts/: coding.md  planning.md  qa.md  research.md  review.md
docker/: Dockerfile.agent-service  entrypoint.sh
docs/: architecture.md  configuration.md  security.md  ssh-bootstrap.md  troubleshooting.md  trusted-sources.md  unraid-deployment.md  unraid-icons.md  worker-governance.md  workflows.md
docs/automation/: README.md  ai-change-index.md
github/: branching.md  labels.md  self-hosted-runner.md
infra/compose/: staging.override.yml
scripts/: bootstrap.sh  create-task.sh  doctor.sh  harden_unraid_authorized_key.sh  ollama_batch_eval.py  run-ai-output-tests.sh  run-local-tests.sh  run-ollama-batch-eval.sh  run-ollama-live-tests.sh  setup_unraid_ssh.sh
scripts/github/: prepare-runner.sh
scripts/lib/: env.sh
scripts/unraid/: deploy-staging.sh  install-appdata.sh  install-from-git.sh  rollback-self-update.sh  rollback-staging.sh  self-update.sh  test-ssh.sh  update-to-commit.sh
services/: __init__.py
services/architecture_worker/: __init__.py  app.py
tests/: conftest.py
(+133 files in other folders)
